Security test check login with hash password
Let plain password equal username

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-endorsed-api</artifactId>
+            <version>7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
