--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,8 @@
             30
         </session-timeout>
     </session-config>
+    <context-param>
+        <param-name>pageSize</param-name>
+        <param-value>20</param-value>
+    </context-param>
 </web-app>
