--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,23 @@
         <welcome-file>view/authentication/index.jsp</welcome-file>
     </welcome-file-list>
 
+    <servlet>
+        <servlet-name>cashier</servlet-name>
+        <jsp-file>/view/cashier/index.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>cashier</servlet-name>
+        <url-pattern>/cashier</url-pattern>
+    </servlet-mapping>
+    <filter>
+        <filter-name>authentication</filter-name>
+        <filter-class>com.fptuni.fms.filters.AuthFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>authentication</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <session-config>
         <session-timeout>
             30
