--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,11 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <error-page>
+        <location>/view/error.jsp</location>
+        <error-code>403</error-code>
+    </error-page>
+
     <session-config>
         <session-timeout>
             30
