--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,17 @@
         <servlet-name>cashier</servlet-name>
         <url-pattern>/cashier</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>payment</servlet-name>
+        <jsp-file>/view/cashier/payment.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>payment</servlet-name>
+        <url-pattern>/pay</url-pattern>
+    </servlet-mapping>
+
     <filter>
         <filter-name>authentication</filter-name>
         <filter-class>com.fptuni.fms.filters.AuthFilter</filter-class>
@@ -23,7 +34,6 @@
 
     <error-page>
         <location>/view/error.jsp</location>
-        <error-code>403</error-code>
     </error-page>
 
     <session-config>
