--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     </servlet-mapping>
     <filter>
         <filter-name>authentication</filter-name>
-        <filter-class>com.fptuni.fms.filters.AuthFilter</filter-class>
+        <filter-class>com.fptuni.fms.filter.AuthFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>authentication</filter-name>
@@ -31,6 +31,7 @@
     </filter-mapping>
 
     <error-page>
+        <error-code>403</error-code>
         <location>/view/error.jsp</location>
     </error-page>
 
