Upload Product Image; Get Order detail by Order ID
- Upload Product Image
- Get Order detail by Order ID
- include 404.jsp

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,7 +34,10 @@
         <error-code>403</error-code>
         <location>/view/error.jsp</location>
     </error-page>
-
+    <error-page>
+        <error-code>404</error-code>
+        <location>/view/404.jsp</location>
+    </error-page>
     <session-config>
         <session-timeout>
             30
