--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-rt</artifactId>
-            <version>2.1.4</version>
+            <version>3.0.2</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -115,6 +115,11 @@
             <artifactId>javaee-endorsed-api</artifactId>
             <version>7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>18.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -129,7 +134,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <skipTests>true</skipTests>
+                    <skipTests>false</skipTests>
                 </configuration>
             </plugin>
             <plugin>
@@ -184,7 +189,7 @@
             <dependency>
                 <groupId>com.fptuni</groupId>
                 <artifactId>FMS</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0</version>
                 <type>war</type>
             </dependency>
         </dependencies>
